--- a/src/index.css
+++ b/src/index.css
@@ -592,6 +592,7 @@ input[type="range"]::-webkit-slider-thumb {
 .range-input-indicator {
   position: absolute;
   top: 0;
+  
   width: 7px;
   height: 50px;
   border-radius:20px;
@@ -672,4 +673,12 @@ input[type="range"]::-webkit-slider-thumb {
 }
 .getDmeShadow{
   box-shadow: 0px 6px 15px 2px #ffe0b1;
+}
+
+
+/* remoforce verify banner */
+.badgeCard{
+background-image: url('./Assets/RemoForceDashboard/verify/bannerClipPath.svg');
+background-repeat: no-repeat;
+background-position: center;
 }
